plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '7.0.0'
}

group 'me.m0dii'
version '2.0.0'

archivesBaseName = 'M0-ExtraEnchants'

shadowJar {
    relocate 'org.bstats', 'me.m0dii.ExtraEnchants'
    minimize()

    archiveFileName = "M0-ExtraEnchants-${version}.jar"
}

repositories {
    mavenLocal()
    mavenCentral()

    flatDir {
        dirs 'libs'
    }

    maven {
        url = uri("https://repo.papermc.io/repository/maven-public/")
    }

    maven {
        url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
    }
}

dependencies {

    implementation "org.bstats:bstats-bukkit:2.2.1"
    compileOnly 'io.papermc.paper:paper-api:1.18.2-R0.1-SNAPSHOT'

    implementation 'org.reflections:reflections:0.10.2'

    compileOnly name: 'Residence5.0.1.5'
}

compileJava.options.encoding = 'UTF-8'

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(17))
}